--- a/2020-01-Puzzle.csproj
+++ b/2020-01-Puzzle.csproj
@@ -41,9 +41,13 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Def\Screen.cs" />
+    <Compile Include="Device\Renderer.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\CountDownTimer.cs" />
+    <Compile Include="Util\Timer.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
@@ -61,10 +65,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Actor\" />
-    <Folder Include="Def\" />
-    <Folder Include="Device\" />
     <Folder Include="Scene\" />
-    <Folder Include="Util\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
