--- a/2020-01-Puzzle.csproj
+++ b/2020-01-Puzzle.csproj
@@ -49,10 +49,23 @@
     <Compile Include="Actor\MoveBlock.cs" />
     <Compile Include="Actor\StopBlock.cs" />
     <Compile Include="Def\Screen.cs" />
+    <Compile Include="Device\BGMLoader.cs" />
+    <Compile Include="Device\CSVReader.cs" />
+    <Compile Include="Device\GameDevice.cs" />
+    <Compile Include="Device\Input.cs" />
+    <Compile Include="Device\Loader.cs" />
     <Compile Include="Device\Renderer.cs" />
+    <Compile Include="Device\Sound.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scene\Ending.cs" />
+    <Compile Include="Scene\Gameplay.cs" />
+    <Compile Include="Scene\IGameMediator.cs" />
+    <Compile Include="Scene\IScene.cs" />
+    <Compile Include="Scene\Scene.cs" />
+    <Compile Include="Scene\SceneManager.cs" />
+    <Compile Include="Scene\Title.cs" />
     <Compile Include="Util\CountDownTimer.cs" />
     <Compile Include="Util\Timer.cs" />
   </ItemGroup>
@@ -70,9 +83,7 @@
     <MonoGameContentReference Include="Content\Content.mgcb" />
     <None Include="app.manifest" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Scene\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
