ブロックの形追加（回転はできない）、次のブロック正しく表示

--- a/2020-01-Puzzle.csproj
+++ b/2020-01-Puzzle.csproj
@@ -42,6 +42,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Actor\Block.cs" />
+    <Compile Include="Actor\BlockManager.cs" />
+    <Compile Include="Actor\Block_I.cs" />
+    <Compile Include="Actor\Block_L.cs" />
     <Compile Include="Actor\Chain.cs" />
     <Compile Include="Actor\ChainEffect.cs" />
     <Compile Include="Actor\ChainFall.cs" />
@@ -49,6 +52,7 @@
     <Compile Include="Actor\FutureBlock.cs" />
     <Compile Include="Actor\MoveBlock.cs" />
     <Compile Include="Actor\StopBlock.cs" />
+    <Compile Include="Actor\Block_--.cs" />
     <Compile Include="Def\Screen.cs" />
     <Compile Include="Device\BGMLoader.cs" />
     <Compile Include="Device\CSVReader.cs" />
